[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["keita"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.24.1"
langchain = "^0.0.231"
tiktoken = "^0.4.0"
openai = "^0.27.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
